# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.961 2009/08/19 10:28:11 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.4 (2009/08/??)
 - (2009/08/18) Fixed bug#4073 - Forward form does not add attachment.
 - (2009/08/18) Fixed bug#4102 - otrs.addUser2Group: "Use of uninitialized
    value" message.
 - (2009/08/18) Replaced a Die() call in Kernel/System/Package.pm with an normal
    return for a better error handling.
 - (2009/08/18) Fixed bug#4049 - SetPermissions.sh fails if .fetchmailrc does
    not exist.
 - (2009/08/18) Added attachment support of ArticleCreate event in event based
    notification feature.
 - (2009/08/18) Fixed bug#4149 - TicketCreate event does not have access to
    Article attributes.
 - (2009/08/18) Fixed bug#4155 - Typo in German translation of
    AdminSystemAddressForm.dtl.
 - (2009/08/17) Fixed bug#3872 - Typo in CustomerFrontend::CommonParam###Action
    issue.
 - (2009/08/17) Fixed bug#4154 - Signature seperator is wrong.
 - (2009/08/16) Fixed bug#4011 - Kernel/System/PostMaster/Filter/Match.pm
    global symbol $Prefix not declared.
 - (2009/08/14) Fixed bug#4150 - US/English Date Format not available.
 - (2009/08/13) Fixed bug#4092 - Junk tickets shown as New tickets in Dashboard.
 - (2009/08/13) Fixed bug#4129 - Watched Tickets in Dashboard.
 - (2009/08/13) Fixed bug#4072 - Inline images broken in reply with
    ArticleStorageFS as attachment backend.

2.4.3 (2009/08/12)
 - (2009/08/10) Fixed bug#4123 - Reinstall of OPM packages with incorrect
    framework or OS possible.
 - (2009/08/10) Fixed bug#4116 - Error when bouncing welcome ticket.
 - (2009/08/10) Fixed bug#3870 - OTRS utf-8 to iso-8859-1 conversion error
    messages on every incoming mail.